--- a/D_F_T_B.ipynb
+++ b/D_F_T_B.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPDSQsy3FVjnvobqpJIk3fp",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -23,18 +7,18 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Koutouf/D-tection-de-fraudes-pour-les-transactions-bancaires/blob/main/D_F_T_B.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Koutouf/FraudShield/blob/main/D_F_T_B.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lTD2uIVOSaUw",
-        "outputId": "15c907e3-ec80-4134-eb4b-fec400aefacc"
+        "outputId": "66d9056c-2146-447f-ce95-3ffb1b8b2efd"
       },
       "outputs": [
         {
@@ -52,6 +36,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "x6XsHeIMTIjJ"
+      },
+      "outputs": [],
       "source": [
         "from pyspark.sql import SparkSession\n",
         "from pyspark.sql.functions import col, when\n",
@@ -60,27 +49,18 @@
         "from pyspark.ml.evaluation import BinaryClassificationEvaluator\n",
         "from pyspark.ml.tuning import ParamGridBuilder, CrossValidator\n",
         "spark = SparkSession.builder.appName(\"FraudDetection\").getOrCreate()"
-      ],
-      "metadata": {
-        "id": "x6XsHeIMTIjJ"
-      },
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount(\"/content/mydrive\")"
-      ],
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YzfpCw8cZRCe",
-        "outputId": "bc8c09cc-50de-4842-aac7-678c775531d3"
+        "outputId": "df75e2b8-e594-49d3-d31b-d944b2f6458b"
       },
-      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,50 +69,36 @@
             "Mounted at /content/mydrive\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount(\"/content/mydrive\")"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "lLsjuVmOaG1S"
+      },
+      "outputs": [],
       "source": [
         "import warnings\n",
         "\n",
         "# Suppression de tous les avertissements pour un affichage plus clair des sorties\n",
         "warnings.filterwarnings(\"ignore\")"
-      ],
-      "metadata": {
-        "id": "lLsjuVmOaG1S"
-      },
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
-        "import zipfile\n",
-        "# Chemin du fichier zip\n",
-        "data_path = \"/content/mydrive/MyDrive/D_F_T_B/PS_20174392719_1491204439457_log.csv.zip\"\n",
-        "# Extract the CSV file\n",
-        "with zipfile.ZipFile(data_path, 'r') as zip_ref:\n",
-        "    zip_ref.extractall('/content')\n",
-        "    csv_newdata = zip_ref.namelist()[0]\n",
-        "\n",
-        "# Lire le fichier CSV\n",
-        "df = spark.read.csv(f\"/content/{csv_newdata}\", header=True, inferSchema=True)\n",
-        "\n",
-        "# Afficher les premières lignes du DataFrame\n",
-        "print(df.head())\n",
-        "df.show(5)\n",
-        "df.printSchema()"
-      ],
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VNY9JaWBTYy7",
-        "outputId": "3f1a4488-a97a-4d67-f2eb-9b8da58164b6"
+        "outputId": "484cbdcb-b06c-48e9-bda3-3ecc9c2737c2"
       },
-      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,47 +131,70 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "import zipfile\n",
+        "# Chemin du fichier zip\n",
+        "data_path = \"/content/mydrive/MyDrive/D_F_T_B/PS_20174392719_1491204439457_log.csv.zip\"\n",
+        "# Extract the CSV file\n",
+        "with zipfile.ZipFile(data_path, 'r') as zip_ref:\n",
+        "    zip_ref.extractall('/content')\n",
+        "    csv_newdata = zip_ref.namelist()[0]\n",
+        "\n",
+        "# Lire le fichier CSV\n",
+        "df = spark.read.csv(f\"/content/{csv_newdata}\", header=True, inferSchema=True)\n",
+        "\n",
+        "# Afficher les premières lignes du DataFrame\n",
+        "print(df.head())\n",
+        "df.show(5)\n",
+        "df.printSchema()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "0mjYuEX3VNrT"
+      },
+      "outputs": [],
       "source": [
         "indexer = StringIndexer(inputCol=\"type\", outputCol=\"type_indexed\")\n",
         "df = indexer.fit(df).transform(df)\n",
         "df = df.withColumn(\"label\", col(\"isFraud\").cast(\"double\"))\n"
-      ],
-      "metadata": {
-        "id": "0mjYuEX3VNrT"
-      },
-      "execution_count": 21,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "id": "RkP--92HduaC"
+      },
+      "outputs": [],
       "source": [
         "feature_columns = [\"type_indexed\", \"amount\", \"oldbalanceOrg\", \"newbalanceOrig\", \"oldbalanceDest\", \"newbalanceDest\"]\n",
         "assembler = VectorAssembler(inputCols=feature_columns, outputCol=\"features\")\n",
         "df = assembler.transform(df).select(\"features\", \"label\")\n"
-      ],
-      "metadata": {
-        "id": "RkP--92HduaC"
-      },
-      "execution_count": 22,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "train_data, test_data = df.randomSplit([0.8, 0.2], seed=42)\n"
-      ],
+      "execution_count": 11,
       "metadata": {
         "id": "dWRPm_JKePye"
       },
-      "execution_count": 23,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "train_data, test_data = df.randomSplit([0.8, 0.2], seed=42)\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "0CsaPwx_eg2o"
+      },
+      "outputs": [],
       "source": [
         "# Initialisation du modèle\n",
         "rf = RandomForestClassifier(featuresCol=\"features\", labelCol=\"label\")\n",
@@ -224,12 +213,48 @@
         "\n",
         "# Entraînement du modèle avec la validation croisée\n",
         "cv_model = crossval.fit(train_data)\n"
-      ],
-      "metadata": {
-        "id": "0CsaPwx_eg2o"
-      },
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "57fS-2bu6dJV"
+      },
+      "outputs": [],
+      "source": [
+        "predictions = cv_model.transform(test_data)\n",
+        "evaluator = BinaryClassificationEvaluator(labelCol=\"label\")\n",
+        "auc = evaluator.evaluate(predictions)\n",
+        "print(f\"Area Under the Curve (AUC) : {auc}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7TMMYN8aI1gJ"
+      },
+      "outputs": [],
+      "source": [
+        "cv_model.write().overwrite().save(\"/path/to/saved_model\")\n"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyN4ir6o75XhHXjvnNoHsMaY",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
